--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html{
 	text-align: center;
 	color: white;
 	background-image: url(images/home-taiwan.jpg);
+	background-attachment: fixed;
 	background-size: cover;
 	padding: 200px 0px;
 	height: 120vh;
